Fixed the overlapping intersection observer hooks. Changed the threshold for the main section to 0.7, added a small color change event to check the functionality.

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,13 @@ body {
     display: grid;
     grid-template-columns: 3fr 1.5fr;
     grid-template-rows: 1.5fr 4fr;
+
+    background-color: #2a2a2a;
+    transition: 0.5s all ease-in-out;
+}
+
+.mainContainer.isVisible {
+    background-color: white;
 }
 
 
